--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-lazy-load-image-component": "^1.5.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
